# elias_fano_rust

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  SimpleSelect_benches.csv  Untitled.ipynb  build.rs  gen_code_tables.py  test.c
.cargo/: config
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
backends/: Cargo.toml
backends/src/: bitarray_m2l.rs  file_backend.rs  lib.rs
benches/: bench_all.rs  bench_codes.rs  bench_quantums.rs  bench_utils.rs  iters.rs  test_low_bits.rs  test_rank.rs  test_select.rs
benchmark/: Cargo.toml
benchmark/benches/: bench_utils.rs  iters.rs
benchmark/src/: bench_bio.rs  bench_ef.rs  bench_fid.rs  bench_hashmap.rs  bench_indexed_bitvec.rs  bench_rsdict.rs  bench_succint_jacobson.rs  bench_succint_rank9.rs  bench_vec.rs  constants.rs  main.rs  utils.rs
codes/: Cargo.toml  gen_code_tables.py
codes/src/: delta.rs  fixed_length.rs  golomb.rs  golomb_runtime.rs  interpolative.rs  minimal_binary.rs  minimal_binary_l2m.rs  minimal_binary_m2l.rs  mod.rs  var_length.rs  zeta.rs
common/src/: constants.rs  errors.rs  lib.rs
data_structures/allocation_traits/: Cargo.toml
data_structures/allocation_traits/src/: lib.rs  slice_impl.rs  vec_impl.rs
data_structures/bitvec/: Cargo.toml
data_structures/compact_array/: Cargo.toml
data_structures/elias_fano/: Cargo.toml
data_structures/heaps/: Cargo.toml
data_structures/heaps/benches/: bench_binary_heap.rs  bench_priority_queues.rs  utils.rs
data_structures/heaps/src/: binary_heap.rs  dijkstra_queue.rs  generic_priority_queue.rs  kary_heap.rs  lib.rs  priority_queue.rs  vecheap.rs
data_structures/heaps/tests/: test_binary_heap.rs  test_kary_heap.rs
data_structures/mmap/: Cargo.toml
data_structures/mmap/src/: lib.rs  (+3 more)
data_structures/sparse_index/: Cargo.toml
data_structures/webgraph/: Cargo.toml
examples/: all_graphs_test.rs  bench_eager.rs  bench_eager_const.rs  bench_lazy.rs  bench_lazy_const.rs  clueweb_bench.rs  clueweb_bench_const.rs  clueweb_bench_iter.rs  clueweb_debug.rs  clueweb_debug2.rs  clueweb_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: iter.rs  iter_in_range.rs  rank_and_select.rs  si_doubleended_iter.rs  simple_select.rs
hongfuzz/: Cargo.toml
hongfuzz/src/: builders.rs  iter.rs  iter_in_range.rs  rank_and_select.rs  simple_select.rs
img/: Plot_csv.ipynb  webgraph
src/: bitarray.rs  bitarray_big.rs  bitarray_little.rs  bitarrayx86.rs  bitstream.rs  builders.rs  concurrent_builder.rs  constants.rs  elias_fano.rs  errors.rs  fuzz_harnesses.rs  getters.rs  hash.rs  high_bits.rs  high_bits_primitives.rs  iter.rs  lib.rs  low_bits_primitives.rs  par_iter.rs  simple_select.rs  traits.rs  utils.rs  utils_methods.rs
src/adapters/: bitstream.rs
src/backends/: bitarray_big.rs  bitarray_l2m.rs  bitarray_little.rs  bitarray_m2l.rs  bitstream.rs  file_backend.rs  mmapped.rs  mod.rs
src/codes/: delta.rs  fixed_length.rs  gamma.rs  golomb.rs  golomb_runtime.rs  interpolative.rs  minimal_binary.rs  minimal_binary_big.rs  minimal_binary_bv.rs  minimal_binary_little.rs  minimal_binary_m2l.rs  mod.rs  tables.rs  unary.rs  var_length.rs  zeta.rs  zeta_runtime.rs
src/compact_array/: mod.rs  primitives.rs
src/elias_fano/: builders.rs  concurrent_builder.rs  elias_fano.rs  getters.rs  hash.rs  iter.rs  memory.rs  mod.rs  par_iter.rs
src/fuzz/: mod.rs
src/portable_mmap/: mod.rs
src/simple_select/: getters.rs  iter.rs  iter_double_ended.rs  memory.rs  mod.rs  par_iter.rs
src/sparse_index/: concurrent.rs  getters.rs  iter.rs  iter_double_ended.rs  memory.rs  mod.rs  par_iter.rs
src/traits/: memory_footprint.rs  mod.rs  read_write.rs
src/trie_vocabulary/: mod.rs
src/webgraph/: builder.rs  bv_compatability.rs  const_webgraph_backend.rs  graph_utils.rs  mod.rs  offsets.rs  runtime_webgraph_backend.rs  traits.rs
tests/: high_bits_test.rs  low_bits_tests.rs  reference.rs  regression.rs  simple_select.rs  sparse_index.rs  test.rs  test_clueweb.rs  test_concurrent_builder.rs  test_errors.rs  test_extended_rank.rs  test_hash.rs  test_mmap.rs  utils.rs
(+40 files in other folders)
