[package]
name = "elias_fano_rust"
version = "0.1.0"
authors = ["zom <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
rsdict = {version="0.0.4", features = ["simd"], path="../rsdict"}
rayon = "1.1"

[dev-dependencies]
rand = {version="0.7", features = ["small_rng"] }
succinct = "0.5.2"
indexed_bitvec = "4.0.1"
bio = "0.32.0"
fid = "0.1.7"
bv = "0.11.1"