[package]
name = "elias_fano_rust"
version = "0.1.0"
authors = ["zom <tommaso.fontana.96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.1"
arbitrary = { version = "0.4.5", features = ["derive"],  optional = true }
fid = {version="0.1.7", optional = true}

[dev-dependencies]
rand = {version="0.7", features = ["small_rng"] }
succinct = "0.5.2"
indexed_bitvec = "4.0.1"
bio = "0.32.0"
fid = "0.1.7"
bv = "0.11.1"
vec_rand = { git = "https://github.com/zommiommy/vec_rand", branch = "master" }
rsdict = {version="0.0.4", features = ["simd"]}

[features]
default = []
unsafe = []
fuzz = ["arbitrary", "fid"]


[profile.release]
opt-level = 3
lto = "fat"
overflow-checks = true     # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = true  # Enables debug assertions.

[profile.test]
default = ["fuzz"]
overflow-checks = true     # Disable integer overflow checks.
debug = true             # Include debug info.
debug-assertions = true  # Enables debug assertions.
opt-level = 3
