[workspace]

members = [
    "backends",
    "benchmark",
    "codes",
    "common",
    "data_structures/allocation_traits",
    "data_structures/bitvec",
    "data_structures/compact_array",
    "data_structures/elias_fano",
    "data_structures/heaps",
    "data_structures/mmap",
    "data_structures/sparse_index",
    "data_structures/webgraph",
]