[package]
name = "heaps"
version = "0.1.0"
authors = ["Tommaso Fontana <tommaso.fontana.96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
rand = {version="0.7", features = ["small_rng"] }
keyed_priority_queue = "0.3.2"

[lib]
name = "heaps"
path = "src/lib.rs"